force-app/main/default/objects/Inquiry__c/Inquiry__c.object-meta.xml
<CustomObject>
    <label>Inquiry</label>
    <nameField>
        <label>Inquiry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inquiries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>