force-app/main/default/objects/Inquiry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Inquiries (Account)</relationshipLabel>
    <relationshipName>Inquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>