force-app/main/default/objects/Inquiry__c/fields/Account_inquiry__c.field-meta.xml
<CustomField>
    <fullName>Account_inquiry__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inquiries</relationshipLabel>
    <relationshipName>Inquiries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>