force-app/main/default/objects/Inquiry__c/fields/Assigned_To_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>