force-app/main/default/objects/Inquiry__c/fields/Auto_Response_Sent__c.field-meta.xml
<CustomField>
    <fullName>Auto_Response_Sent__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Auto-Response Sent</label>
    <type>Checkbox</type>
</CustomField>