force-app/main/default/objects/Inquiry__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Inquiries (Contact)</relationshipLabel>
    <relationshipName>Inquiries2</relationshipName>
    <type>Lookup</type>
</CustomField>