force-app/main/default/objects/Inquiry__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>