force-app/main/default/objects/Inquiry__c/fields/Inquiry_Status__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Status__c</fullName>
    <label>Inquiry Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>