force-app/main/default/objects/Inquiry__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>Inquiry__c</referenceTo>
    <relationshipLabel>Inquiries (User)</relationshipLabel>
    <relationshipName>Inquiries3</relationshipName>
    <type>Lookup</type>
</CustomField>