force-app/main/default/objects/Inquiry__c/recordTypes/Customer_Inquiry.recordType-meta.xml
<RecordType>
    <fullName>Customer_Inquiry</fullName>
    <active>true</active>
    <label>Customer Inquiry</label>
</RecordType>