force-app/main/default/objects/Inquiry__c/validationRules/Mandatory_Fields_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Fields_Check</fullName>
    <active>true</active>
    <description>Ensures required fields are filled to prevent incomplete records.</description>
    <errorConditionFormula>ISBLANK(Customer_Name__c) || ISBLANK(Email__c)</errorConditionFormula>
    <errorMessage>Customer Name and Email are required fields.</errorMessage>
</ValidationRule>