force-app/main/default/objects/Inquiry__c/validationRules/Valid_Email_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Email_Format</fullName>
    <active>true</active>
    <description>Checks that the Contact Email has a valid format.</description>
    <errorConditionFormula>NOT(REGEX( $User.Email , &quot;[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}&quot;))</errorConditionFormula>
    <errorMessage>Please enter a valid email address.</errorMessage>
</ValidationRule>